--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.1.17",
     "tailwindcss": "^4.1.17"
+  },
+    "scripts": {
+    "start": "npx @tailwindcss/cli -i ./input.css -o ./output.css --watch"
   }
 }
